--- a/backend/package.json
+++ b/backend/package.json
@@ -2,24 +2,25 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "server": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@libsql/client": "^0.6.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.7.5"
-  },
   "devDependencies": {
-    "drizzle-kit": "^0.21.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.11",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
