--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -10,6 +10,11 @@
         "sourceType": "module"
     },
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": [
+            "error",
+            {
+              "endOfLine": "auto"
+            }
+          ]
     }
 }
