--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.12.11",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -28,6 +29,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "@libsql/client": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10"
   }
 }
