✅ add jwt login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,49 +1,49 @@
 {
     "files.exclude": {
-        "**/.git": true,
+        "**/.git": false,
         "**/.svn": true,
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "**/.circleci": true,
-        "**/.compodocrc*": true,
-        "**/.editorconfig": true,
-        "**/.gitattributes": true,
-        "**/.github": true,
-        "**/.gitkeep": true,
-        "**/.gitignore": true,
-        "**/.npmrc": true,
-        "**/.prettierignore": true,
-        "**/.prettierrc*": true,
-        "**/.scannerwork": true,
-        "**/.eslint*": true,
-        "**/.docker*": true,
-        "**/docker": true,
-        "**/.nvmrc": true,
-        "**/.vscodeignore": true,
-        "**/.vscode": true,
-        "**/CHANGELOG.md": true,
-        "**/README.md": true,
-        "**/LICENSE.md": true,
-        "**/angular.json": true,
-        "**/workspace.json": true,
-        "**/jest-mocks.ts": true,
-        "**/jest.config.js": true,
-        "**/jest.preset.js": true,
-        "**/node_modules": true,
-        "**/nx.json": true,
-        "**/package-lock.json": true,
-        "**/package.json": true,
-        "**/sonar-project.properties": true,
-        "**/tsconfig*": true,
-        "**/tslint*": true,
-        "**/babel*": true,
-        "**/.babel*": true,
-        "**/webpack*": true,
-        "**/typings.d.ts": true,
-        "**/*.yaml": true,
-        "**/Makefile": true,
-        "**/*.sh": true
+        "**/.circleci": false,
+        "**/.compodocrc*": false,
+        "**/.editorconfig": false,
+        "**/.gitattributes": false,
+        "**/.github": false,
+        "**/.gitkeep": false,
+        "**/.gitignore": false,
+        "**/.npmrc": false,
+        "**/.prettierignore": false,
+        "**/.prettierrc*": false,
+        "**/.scannerwork": false,
+        "**/.eslint*": false,
+        "**/.docker*": false,
+        "**/docker": false,
+        "**/.nvmrc": false,
+        "**/.vscodeignore": false,
+        "**/.vscode": false,
+        "**/CHANGELOG.md": false,
+        "**/README.md": false,
+        "**/LICENSE.md": false,
+        "**/angular.json": false,
+        "**/workspace.json": false,
+        "**/jest-mocks.ts": false,
+        "**/jest.config.js": false,
+        "**/jest.preset.js": false,
+        "**/node_modules": false,
+        "**/nx.json": false,
+        "**/package-lock.json": false,
+        "**/package.json": false,
+        "**/sonar-project.properties": false,
+        "**/tsconfig*": false,
+        "**/tslint*": false,
+        "**/babel*": false,
+        "**/.babel*": false,
+        "**/webpack*": false,
+        "**/typings.d.ts": false,
+        "**/*.yaml": false,
+        "**/Makefile": false,
+        "**/*.sh": false
     }
 }
